k8s/base/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: chat-app

spec:
  type: ClusterIP

  selector:
    app: mongodb

  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
      protocol: TCP
