k8s/base/policy-backend-database.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-to-mongodb
spec:
  podSelector:
    matchLabels:
      app: mongodb   # target pods

  policyTypes:
  - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend   # only backend allowed

    ports:
    - protocol: TCP
      port: 27017
