k8s/base/policy-for-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: chat-app
spec:
  podSelector: {}   # applies to ALL pods

  policyTypes:
  - Ingress
  - Egress
